5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1637_2446.log
== TEST (2019-04-11 11:13:06) 
-- CODE:
senha = int(input("digite a senha: "))
dig1 = senha // 100000
dig2 = (senha % 100000) // 10000
dig3 = (senha % 100000) // 1000
print(dig3)

 
-- OUTPUT:
87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:13:25) 
-- CODE:
senha = int(input("digite a senha: "))
dig1 = senha // 100000
dig2 = (senha % 100000) // 10000
dig3 = (senha % 100000) // 1000
print(dig3)

 
-- OUTPUT:
87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:22:50) 
-- CODE:
senha = int(input("digite a senha com 6 digitos: "))
dig1 = senha // 100000
dig2 = (senha % 100000) // 10000
dig3 = (senha % 100000) // 1000
dig4 = (senha % 100000) // 100
dig5 = (senha % 100000) // 10
dig6 = senha % 1000000

if (((dig2 + dig4 + dig6) / (dig1 + dig3 + dig5)) == 0):
	print("acesso liberado")

else:
	print("senha invalida")
	
 
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:23:44) 
-- CODE:
senha = int(input("digite a senha: "))
dig1 = senha // 100000
dig2 = (senha % 100000) // 10000
dig3 = (senha % 100000) // 1000
dig4 = (senha % 100000) // 100
dig5 = (senha % 100000) // 10
dig6 = senha % 1000000

if (((dig2 + dig4 + dig6) / (dig1 + dig3 + dig5)) == 0):
	print("acesso liberado")

else:
	print("senha invalida")
	
 
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:25:12) 
-- CODE:
senha = int(input("digite a senha: "))
dig1 = senha // 1000000
dig2 = (senha % 1000000) // 10000
dig3 = (senha % 1000000) // 1000
dig4 = (senha % 1000000) // 100
dig5 = (senha % 1000000) // 10
dig6 = senha % 1000000

if (((dig2 + dig4 + dig6) / (dig1 + dig3 + dig5)) == 0):
	print("acesso liberado")

else:
	print("senha invalida")
	
 
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:25:32) 
-- CODE:
senha = int(input("digite a senha: "))
dig1 = senha // 1000000
dig2 = (senha % 1000000) // 10000
dig3 = (senha % 1000000) // 1000
dig4 = (senha % 1000000) // 100
dig5 = (senha % 1000000) // 10
dig6 = senha % 1000000

if (((dig2 + dig4 + dig6) / (dig1 + dig3 + dig5)) == 0):
	print("acesso liberado")

else:
	print("senha invalida")
	
 
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:25:51) 
-- CODE:
senha = int(input("digite a senha: "))
dig1 = senha // 1000000
dig2 = (senha % 1000000) // 10000
dig3 = (senha % 1000000) // 1000
dig4 = (senha % 1000000) // 100
dig5 = (senha % 1000000) // 10
dig6 = senha % 1000000

if (((dig2 + dig4 + dig6) / (dig1 + dig3 + dig5)) == 0):
	print("acesso liberado")

else:
	print("senha invalida")
	
 
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:32:02) 
-- CODE:
senha = int(input("digite a senha: "))
dig1 = senha // 1000000
dig2 = (senha % 1000000) // 10000
dig3 = (senha % 1000000) // 1000
dig4 = (senha % 1000000) // 100
dig5 = (senha % 1000000) // 10
dig6 = senha % 1000000

if (((dig2 + dig4 + dig6) % (dig1 + dig3 + dig5)) == 0)
	print("acesso liberado")

else:
	print("senha invalida")
	
 
-- ERROR:
File "XXXX", line 9
    if (((dig2 + dig4 + dig6) % (dig1 + dig3 + dig5)) == 0)
                                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:32:29) 
-- CODE:
senha = int(input("digite a senha: "))
dig1 = senha // 1000000
dig2 = (senha % 1000000) // 10000
dig3 = (senha % 1000000) // 1000
dig4 = (senha % 1000000) // 100
dig5 = (senha % 1000000) // 10
dig6 = senha % 1000000

if (((dig2 + dig4 + dig6) % (dig1 + dig3 + dig5)) == 0):
	print("acesso liberado")

else:
	print("senha invalida")
	
 
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:34:54) 
-- CODE:
senha = int(input("digite a senha: "))
dig1 = senha // 100000
dig2 = (senha % 100000) // 10000
dig3 = (senha % 100000) // 1000
dig4 = (senha % 100000) // 100
dig5 = (senha % 100000) // 10
dig6 = senha % 100000

if (((dig2 + dig4 + dig6) % (dig1 + dig3 + dig5)) == 0):
	print("acesso liberado")

else:
	print("senha invalida")
	
 
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:35:43) 
-- CODE:
senha = int(input("digite a senha: "))
dig1 = senha // 100000
dig2 = (senha % 100000) // 10000
dig3 = (senha % 100000) // 1000
dig4 = (senha % 100000) // 100
dig5 = (senha % 100000) // 10
dig6 = senha % 100000

if (((dig2 + dig4 + dig6) % (dig1 + dig3 + dig5)) == 0):
	print("acesso liberado")

else:
	print("senha invalida")
	
 
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:36:36) 
-- CODE:
senha = int(input("digite a senha: "))
dig1 = senha // 100000
dig2 = (senha % 100000) // 10000
dig3 = (senha % 100000) // 1000
dig4 = (senha % 100000) // 100
dig5 = (senha % 100000) // 10
dig6 = senha % 100000

if (((dig2 + dig4 + dig6) % (dig1 + dig3 + dig5)) == 0):
	print("acesso liberado")

else:
	print("senha invalida")
	
 
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:36:39) 
-- CODE:
senha = int(input("digite a senha: "))
dig1 = senha // 100000
dig2 = (senha % 100000) // 10000
dig3 = (senha % 100000) // 1000
dig4 = (senha % 100000) // 100
dig5 = (senha % 100000) // 10
dig6 = senha % 100000

if (((dig2 + dig4 + dig6) % (dig1 + dig3 + dig5)) == 0):
	print("acesso liberado")

else:
	print("senha invalida")
	
 
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:36:40) 
-- CODE:
senha = int(input("digite a senha: "))
dig1 = senha // 100000
dig2 = (senha % 100000) // 10000
dig3 = (senha % 100000) // 1000
dig4 = (senha % 100000) // 100
dig5 = (senha % 100000) // 10
dig6 = senha % 100000

if (((dig2 + dig4 + dig6) % (dig1 + dig3 + dig5)) == 0):
	print("acesso liberado")

else:
	print("senha invalida")
	
 
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:36:40) 
-- CODE:
senha = int(input("digite a senha: "))
dig1 = senha // 100000
dig2 = (senha % 100000) // 10000
dig3 = (senha % 100000) // 1000
dig4 = (senha % 100000) // 100
dig5 = (senha % 100000) // 10
dig6 = senha % 100000

if (((dig2 + dig4 + dig6) % (dig1 + dig3 + dig5)) == 0):
	print("acesso liberado")

else:
	print("senha invalida")
	
 
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:36:40) 
-- CODE:
senha = int(input("digite a senha: "))
dig1 = senha // 100000
dig2 = (senha % 100000) // 10000
dig3 = (senha % 100000) // 1000
dig4 = (senha % 100000) // 100
dig5 = (senha % 100000) // 10
dig6 = senha % 100000

if (((dig2 + dig4 + dig6) % (dig1 + dig3 + dig5)) == 0):
	print("acesso liberado")

else:
	print("senha invalida")
	
 
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:36:55) 
-- CODE:
senha = int(input("digite a senha: "))
dig1 = senha // 100000
dig2 = (senha % 100000) // 10000
dig3 = (senha % 100000) // 1000
dig4 = (senha % 100000) // 100
dig5 = (senha % 100000) // 10
dig6 = senha % 100000

if (((dig2 + dig4 + dig6) % (dig1 + dig3 + dig5)) == 0):
	print("acesso liberado")

else:
	print("senha invalida")
	
 
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:37:47) 
-- CODE:
senha = int(input("digite a senha: "))
dig1 = senha // 100000
dig2 = (senha % 100000) // 10000
dig3 = (senha % 100000) // 1000
dig4 = (senha % 100000) // 100
dig5 = (senha % 100000) // 10
dig6 = senha % 100000

if (((dig2 + dig4 + dig6) % (dig1 + dig3 + dig5)) == 0):
	print("acesso liberado")

else:
	print("senha invalida")
	
 
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:38:12) 
-- CODE:
senha = int(input("digite a senha: "))
dig1 = senha // 100000
dig2 = (senha % 100000) // 10000
dig3 = (senha % 100000) // 1000
dig4 = (senha % 100000) // 100
dig5 = (senha % 100000) // 10
dig6 = senha % 100000
print(dig1)

if (((dig2 + dig4 + dig6) % (dig1 + dig3 + dig5)) == 0):
	print("acesso liberado")

else:
	print("senha invalida")
	
 
-- OUTPUT:
0
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:38:35) 
-- CODE:
senha = int(input("digite a senha: "))
dig1 = senha // 100000
dig2 = (senha % 100000) // 10000
dig3 = (senha % 100000) // 1000
dig4 = (senha % 100000) // 100
dig5 = (senha % 100000) // 10
dig6 = senha % 100000
print(dig2)

if (((dig2 + dig4 + dig6) % (dig1 + dig3 + dig5)) == 0):
	print("acesso liberado")

else:
	print("senha invalida")
	
 
-- OUTPUT:
8
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:38:44) 
-- CODE:
senha = int(input("digite a senha: "))
dig1 = senha // 100000
dig2 = (senha % 100000) // 10000
dig3 = (senha % 100000) // 1000
dig4 = (senha % 100000) // 100
dig5 = (senha % 100000) // 10
dig6 = senha % 100000
print(dig2)

if (((dig2 + dig4 + dig6) % (dig1 + dig3 + dig5)) == 0):
	print("acesso liberado")

else:
	print("senha invalida")
	
 
-- OUTPUT:
8
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:38:54) 
-- CODE:
senha = int(input("digite a senha: "))
dig1 = senha // 100000
dig2 = (senha % 100000) // 10000
dig3 = (senha % 100000) // 1000
dig4 = (senha % 100000) // 100
dig5 = (senha % 100000) // 10
dig6 = senha % 100000
print(dig2)

if (((dig2 + dig4 + dig6) % (dig1 + dig3 + dig5)) == 0):
	print("acesso liberado")

else:
	print("senha invalida")
	
 
-- OUTPUT:
8
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:39:07) 
-- CODE:
senha = int(input("digite a senha: "))
dig1 = senha // 100000
dig2 = (senha % 100000) // 10000
dig3 = (senha % 100000) // 1000
dig4 = (senha % 100000) // 100
dig5 = (senha % 100000) // 10
dig6 = senha % 100000
print(dig2)

if (((dig2 + dig4 + dig6) % (dig1 + dig3 + dig5)) == 0):
	print("acesso liberado")

else:
	print("senha invalida")
	
 
-- OUTPUT:
8
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:39:15) 
-- CODE:
senha = int(input("digite a senha: "))
dig1 = senha // 100000
dig2 = (senha % 100000) // 10000
dig3 = (senha % 100000) // 1000
dig4 = (senha % 100000) // 100
dig5 = (senha % 100000) // 10
dig6 = senha % 100000
print(dig3)

if (((dig2 + dig4 + dig6) % (dig1 + dig3 + dig5)) == 0):
	print("acesso liberado")

else:
	print("senha invalida")
	
 
-- OUTPUT:
87
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:39:40) 
-- CODE:
senha = int(input("digite a senha: "))
dig1 = senha // 100000
dig2 = (senha % 100000) // 10000
dig3 = (senha % 100000) // 10000
dig4 = (senha % 100000) // 100
dig5 = (senha % 100000) // 10
dig6 = senha % 100000
print(dig3)

if (((dig2 + dig4 + dig6) % (dig1 + dig3 + dig5)) == 0):
	print("acesso liberado")

else:
	print("senha invalida")
	
 
-- OUTPUT:
8
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:39:56) 
-- CODE:
senha = int(input("digite a senha: "))
dig1 = senha // 100000
dig2 = (senha % 100000) // 10000
dig3 = (senha % 10000) // 100
dig4 = (senha % 100000) // 100
dig5 = (senha % 100000) // 10
dig6 = senha % 100000
print(dig3)

if (((dig2 + dig4 + dig6) % (dig1 + dig3 + dig5)) == 0):
	print("acesso liberado")

else:
	print("senha invalida")
	
 
-- OUTPUT:
76
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:40:10) 
-- CODE:
senha = int(input("digite a senha: "))
dig1 = senha // 100000
dig2 = (senha % 100000) // 10000
dig3 = (senha % 10000) // 1000
dig4 = (senha % 100000) // 100
dig5 = (senha % 100000) // 10
dig6 = senha % 100000
print(dig3)

if (((dig2 + dig4 + dig6) % (dig1 + dig3 + dig5)) == 0):
	print("acesso liberado")

else:
	print("senha invalida")
	
 
-- OUTPUT:
7
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:40:38) 
-- CODE:
senha = int(input("digite a senha: "))
dig1 = senha // 100000
dig2 = (senha % 100000) // 10000
dig3 = (senha % 10000) // 1000
dig4 = (senha % 1000) // 100
dig5 = (senha % 100) // 10
dig6 = senha % 100000
print(dig3)

if (((dig2 + dig4 + dig6) % (dig1 + dig3 + dig5)) == 0):
	print("acesso liberado")

else:
	print("senha invalida")
	
 
-- OUTPUT:
7
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:40:49) 
-- CODE:
senha = int(input("digite a senha: "))
dig1 = senha // 100000
dig2 = (senha % 100000) // 10000
dig3 = (senha % 10000) // 1000
dig4 = (senha % 1000) // 100
dig5 = (senha % 100) // 10
dig6 = senha % 100000
print(dig6)

if (((dig2 + dig4 + dig6) % (dig1 + dig3 + dig5)) == 0):
	print("acesso liberado")

else:
	print("senha invalida")
	
 
-- OUTPUT:
87612
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:41:01) 
-- CODE:
senha = int(input("digite a senha: "))
dig1 = senha // 100000
dig2 = (senha % 100000) // 10000
dig3 = (senha % 10000) // 1000
dig4 = (senha % 1000) // 100
dig5 = (senha % 100) // 10
dig6 = senha % 10
print(dig6)

if (((dig2 + dig4 + dig6) % (dig1 + dig3 + dig5)) == 0):
	print("acesso liberado")

else:
	print("senha invalida")
	
 
-- OUTPUT:
2
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:41:13) 
-- CODE:
senha = int(input("digite a senha: "))
dig1 = senha // 100000
dig2 = (senha % 100000) // 10000
dig3 = (senha % 10000) // 1000
dig4 = (senha % 1000) // 100
dig5 = (senha % 100) // 10
dig6 = senha % 10
print(dig6)

if (((dig2 + dig4 + dig6) % (dig1 + dig3 + dig5)) == 0):
	print("acesso liberado")

else:
	print("senha invalida")
	
 
-- OUTPUT:
2
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:41:20) 
-- CODE:
senha = int(input("digite a senha: "))
dig1 = senha // 100000
dig2 = (senha % 100000) // 10000
dig3 = (senha % 10000) // 1000
dig4 = (senha % 1000) // 100
dig5 = (senha % 100) // 10
dig6 = senha % 10

if (((dig2 + dig4 + dig6) % (dig1 + dig3 + dig5)) == 0):
	print("acesso liberado")

else:
	print("senha invalida")
	
 
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:41:28) 
-- CODE:
senha = int(input("digite a senha: "))
dig1 = senha // 100000
dig2 = (senha % 100000) // 10000
dig3 = (senha % 10000) // 1000
dig4 = (senha % 1000) // 100
dig5 = (senha % 100) // 10
dig6 = senha % 10

if (((dig2 + dig4 + dig6) % (dig1 + dig3 + dig5)) == 0):
	print("acesso liberado")

else:
	print("senha invalida")
	
 
-- EXECUTION TIME:
0.169051
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
